<resources>
    <string name="app_name">DiGi1</string>

    <string name="splash_bottom_txt">Koperasi Indonesia  <![CDATA[ \n ]]> Maju Makmur Sejahtera</string>
    <!--<string name="splash_middle_txt">MASTER\nAGEN ANTAR\nBANGSA</string>-->
    <string name="splash_middle_txt">DIGI1 BEKERJA SAMA DENGAN KOPERASI INDONESIA</string>
    <string name="splash_top_txt">DIGI1 BEKERJA SAMA DENGAN</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide1_title">Life Advice Looking\nThrough A Window</string>
    <string name="slide1_desc">Secure container separates business and personal data with end to end encryption and managed securety policies.</string>

    <string name="slide2_title">5 Reasons To Purchase\nDesktop Computers</string>
    <string name="slide2_desc">Secure container separates business and personal data with end to end encryption and managed securety policies.</string>

    <string name="slide3_title">Help Finding\nInformation Online</string>
    <string name="slide3_desc">Secure container separates business and personal data with end to end encryption and managed securety policies.</string>

    <string name="slide4_title">Compatible Inkjet\nCartridge</string>
    <string name="slide4_desc">Secure container separates business and personal data with end to end encryption and managed securety policies.</string>

    <string name="slide5_title">Hotels How To Get Free\nGifts</string>
    <string name="slide5_desc">Secure container separates business and personal data with end to end encryption and managed securety policies.</string>

    <string name="login">LOGIN</string>
    <string name="signin">DAFTAR</string>
    <string name="more">LANJUT</string>
    <string name="submit">SUBMIT</string>
    <string name="text_size">TEXT SIZE</string>
    <string name="share">SHARE</string>

    <string name="forget_pass">Lupa password?</string>
    <string name="no_account">Belum punya akun?</string>
    <string name="wait">Please Wait...</string>

    <string name="full_name">Nama Lengkap</string>
    <string name="email">Alamat e-mail</string>
    <string name="phone_num">Nomor Ponsel</string>
    <string name="pin">PIN</string>
    <string name="confirm_pin">PIN Konfirmasi</string>
    <string name="birthday">Tanggal Lahir</string>
    <string name="email_or_phone">Email or PhoneNumber</string>
    <string name="submit_code">KODE OTP</string>
    <string name="resubmit_code">Kirim ulang OTP</string>
    <string name="password">Password</string>
    <string name="new_passwords">Password Baru</string>
    <string name="confirm_password">Password Konfirmasi</string>
    <string name="agree_term">Dengan mendaftar anda setuju dengan Peraturan\nkami dan ketenuan privasi.</string>

    <string name="alert_recovery">password baru anda telah diganti.</string>
    <string name="alert_sign">Terima kasih telah registrasi di Mi-1. Sebelum melanjutkan mohon cek nomor telepon anda untuk konfirmasi</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_phone">This phone number is incorrect</string>
    <string name="error_null_username">Please enter your full name.</string>
    <string name="error_null_email">Please enter your email address.</string>
    <string name="error_null_password">Please enter your password.</string>
    <string name="error_null_phone">Please enter your phone number.</string>
    <string name="error_null_code">Please enter your verify code.</string>
    <string name="error_failed_connect">Failed connect to server.</string>
    <string name="error_dismatch_password">Dismatch password.</string>

    <string name="search_hint">Search DiGi1 Indonesia</string>

    <string name="nav_profil">PROFIL</string>
    <string name="nav_beranda">BERANDA</string>
    <string name="nav_tentang">TENTANG\nMi1</string>
    <string name="nav_hubungi">HUBUNGI\nKAMI</string>
    <string name="nav_bantuan">BANTUAN</string>
    <string name="nav_bagikan">BAGIKAN</string>
    <string name="nav_logout">LOG OUT</string>
    <string name="nav_tambah_user">REGISTER\nUSER</string>

    <string name="news_balance">Saldo Rp %1$s</string>
    <string name="top_up">TOP UP</string>
    <string name="top">TOP</string>
    <string name="back">BACK</string>
    <string name="pre_paid">Pembayaran</string>
    <string name="buy">Beli</string>
    <string name="transfer">Transfer</string>
    <string name="convert">Konversi</string>
    <string name="exchange">Exchange</string>

    <string name="balance">Saldo</string>
    <string name="pre_payment">Pembayaran Prabayar</string>
    <string name="post_payment">Pembayaran Pascabayar</string>
    <string name="amount">Jumlah</string>
    <string name="date">Tanggal</string>
    <string name="info">Info</string>

    <string name="minimun_amount">Minimum top-up Rp 10.000</string>
    <string name="disclaimer">Disclaimer When you are a lover of astronomy, the confusion between astronomy and astrology by those who don<![CDATA["'"]]>t really understand the differences can get pretty aggravating.</string>
    <string name="error_null_amount">Enter amount topup</string>
    <string name="error_invalid_amount">A minimal amount of Rp 10,000 topup</string>
    <string name="pay">BAYAR</string>
    <string name="maybank">Lakukan transfer ke Bank Bii Maybank dengan kide 000 between astronomy and astrology.</string>

    <string name="customer_num">Nomor Pelanggan</string>
    <string name="purchase_amount">Jumlah Pembelian</string>

    <string-array name="prepaid">
        <item>PLN PRABAYAR</item>
        <item>PULSA HP</item>
    </string-array>

    <string-array name="postpaid">
        <item>PLN PASCABAYAR</item>
        <item>HP PASCABAYAR</item>
        <item>ASURANSI</item>
        <item>PAM</item>
        <item>TELKOM GROUP</item>
    </string-array>

    <string-array name="transferdigi1">
        <item>TRANSFER LP</item>
        <item>TRANSFER WP</item>
        <item>TRANSFER PP</item>
    </string-array>

    <string-array name="convertdigi1">
        <item>WP to MP</item>
        <item>WP to PP</item>
        <item>LP to MP</item>
        <item>LP to PP</item>
        <item>PP to MP</item>
    </string-array>

    <string-array name="exchangedigi1">
        <item>MP to DiGiMall.com IDR</item>
        <item>LP to eCash IDR</item>
        <item>LP to Mobile Apps IDR</item>
    </string-array>
    <string-array name="choiceexchangedigi1">
        <item>10%</item>
        <item>25%</item>
        <item>50%</item>
        <item>75%</item>
        <item>100%</item>
    </string-array>
    <string-array name="packagelist">
        <item>Community</item>
        <item>Group</item>
        <item>Family</item>
        <item>Personal</item>
        <item>Trial</item>
    </string-array>
    <string-array name="packagelistvalue">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="login_failed">Login gagal, silahkan coba lagi</string>
    <string name="null_data">Data tidak tersedia</string>
    <string name="data_already_inquiry">Data telah diinquiry</string>
    <string name="payment_succeed">Pembayaran Berhasil</string>
    <string name="payment_failed">Pembayaran Gagal</string>
    <string name="thank_you">Terima Kasih</string>
    <string name="insufficient_balance">Dana tidak mencukupi</string>

    <string name="about_title">Tentang Mi1 Indonesia</string>
    <string name="about_content1">The following is not a definitive article on this subject.
        It is just an expression of my own thoughts. My opinion is that enlightenment is not just
        one state but is a progressive and gradual establishing of states of consciousness.</string>
    <string name="about_content2">\nI, myself have not reach the end of the road. But from years on a spiritual quest,
        I can safely say that enlightenment happens ina series or stages of self-realisations and self-discoveries.\n\nUsually
        there is a difference between an initial awakening and a later stabilisation of that stage that happens through
        practice or experiences. The initial awakenings are new discoveries about the dynamics of consciousness, while
        the stabilisation is the assimilation of what is being discovered into one<![CDATA["'"]]>s life experience. Sometimes,
        a new discovery can completely over-rule or modify upon an older one.</string>
    <string name="contact_title">DiGi1 Indonesia</string>
    <string name="contact_msg"></string>
    <string name="contact_phone_num"></string>
    <string name="contact_email"></string>

    <string-array name="help_content">
        <item>Developed by the Intel Corporation, HDCP stands for high-bandwidth digital content protection. As the descriptive
            name implies, HDCP is all about protecting the integrity of various audio and video content as it travels over a
            multiplicity of different type of interfaces. Such data interfaces as GVIF, DVI, and HDMI will all support the functionality
            of HECP. \n\nIs HDCP Free? \n\nNo. HDCP requires an authorized license.The license can be obtained through Digital Content
            Protection, which is a subsidiary of Intel Corporation. Generally, the license can be obtained by filing an application
            and paying an annual fee. Once the application is accepted and the user agrees to the terms found in the licensing
            agrees to the terms found in the licensing agreement, the right to make use of HDCP is granted. \n\nWhat Are Some Of The Key
            Terms of Use For HDCP? \n\nOne key term hax to do with the transmission of data to unauthorized receivers. That is, an HDCP
            protected video source is not allowed to transmit protected content to any receiver that has not be verified to be HDCP compliant.</item>
        <item>Cara Transfer</item>
        <item>Cara Cash out</item>
        <item>Cara Daftar</item>
        <item>Pengetahuan Wallet</item>
    </string-array>

    <string name="alert_cash">Philosophy is considered a science but it is difficult to say, when one has to compare with an
        ordinary science, for example biology, or chemistry.</string>

    <string name="save">SIMPAN</string>
    <string name="confirm">Konfirmasi</string>
    <string name="old_password">Kata Sandi Lama</string>
    <string name="new_password">Kata Sandi Baru</string>
    <string name="alert_change_password">The Password has been changed successfully.</string>

    <string name="confirm_transfer">Do you really want to transfer?</string>
    <string name="fcm_sender_id">402604308168</string>
    <string name="group_name">Group Name</string>

    <string-array name="stepLabels">
        <item>Choose Package</item>
        <item>Referral</item>
        <item>Account Information</item>
        <item>Bank Account</item>
        <item>Complete Registration</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
