<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/splash_bg"
        android:scaleType="centerCrop"/>
    
    <LinearLayout
        android:id="@+id/ll_home_bottom"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="100">

        <Button
            android:id="@+id/btn_home_login"
            android:layout_height="40dp"
            android:layout_width="0dp"
            android:layout_weight="35"
            android:text="@string/login"
            android:textSize="18sp"
            android:background="@drawable/btn_white"
            />

        <View
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="5"/>

        <Button
            android:id="@+id/btn_home_sign"
            android:layout_height="40dp"
            android:layout_width="0dp"
            android:layout_weight="35"
            android:text="@string/signin"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_green"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_home_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/splash_bottom_txt"
        android:layout_above="@id/ll_home_bottom"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:textSize="18sp"
        android:textColor="#ffff"/>

    <TextView
        android:id="@+id/txt_home_middle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/splash_middle_txt"
        android:layout_above="@id/txt_home_bottom"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="#ffff" />

    <TextView
        android:id="@+id/txt_home_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_top_txt"
        android:layout_above="@id/txt_home_middle"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:textSize="18sp"
        android:textColor="#ffff" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/splash_logo"
        android:scaleType="fitCenter"
        android:background="@null"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="35dp"
        android:layout_above="@+id/txt_home_top"/>

</RelativeLayout>