<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@color/colorMainBg"
    tools:context="com.mi1.duitku.LoginActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        card_view:cardUseCompatPadding="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_sign_error"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorWrong"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:gravity="center_vertical"
                android:text="error message"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:visibility="invisible"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <EditText
                        android:id="@+id/edt_full_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/full_name"
                        android:textSize="16sp"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <EditText
                        android:id="@+id/edt_sign_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:textSize="16sp"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <EditText
                        android:id="@+id/edt_sign_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_num"
                        android:inputType="phone"
                        android:textSize="16sp"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/edt_sign_birthday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/birthday"
                        android:inputType="date"
                        android:textSize="16sp"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <EditText
                        android:id="@+id/edt_sign_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:textSize="16sp"
                        android:inputType="textPassword"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <EditText
                        android:id="@+id/edt_sign_confirm_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:textSize="16sp"
                        android:inputType="textPassword"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_sign"
                    style="?android:textAppearanceSmall"
                    android:layout_height="40dp"
                    android:layout_width="140dp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/signin"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"
                    android:background="@drawable/btn_green"
                    />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/agree_term"
        android:textSize="14sp"
        />

</FrameLayout>
