<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorMainBg"
    tools:context="com.mi1.duitku.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_white">

        <TextView
            android:id="@+id/txt_login_error"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorWrong"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:gravity="center_vertical"
            android:text="error message"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:visibility="invisible"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:baselineAligned="false">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <EditText
                    android:id="@+id/edt_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_or_phone"
                    android:textSize="16sp"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <EditText
                    android:id="@+id/edt_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textSize="16sp"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/txt_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/forget_pass"
                android:textSize="14sp"
                android:paddingRight="15dp"
                />


            <Button
                android:id="@+id/btn_login"
                style="?android:textAppearanceSmall"
                android:layout_height="40dp"
                android:layout_width="140dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/login"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:background="@drawable/btn_green"
                />

            <TextView
                android:id="@+id/txt_no_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/no_account"
                android:textSize="14sp"
                android:textColor="#5A9FF7"
                />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
