<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:padding="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/amount"
            android:textSize="14sp"
            android:paddingLeft="5dp"
            android:textColor="@color/colorDisable"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:text="@string/date"
            android:textSize="14sp"
            android:textColor="@color/colorDisable"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/info"
            android:textSize="14sp"
            android:textColor="@color/colorDisable"/>

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardUseCompatPadding="true">

        <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
            android:id="@+id/refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            app:tr_wave_height="50dp"
            app:tr_head_height="40dp"
            app:tr_bottom_height="40dp"
            android:padding="8dp" >

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_cash"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
