<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <android.support.v7.widget.CardView
        android:id="@+id/card_payment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <EditText
                    android:id="@+id/edt_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/minimun_amount"
                    android:textSize="16sp"
                    android:inputType="numberDecimal"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/txt_resubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/disclaimer"
                android:textSize="14sp"
                />

            <Button
                android:id="@+id/btn_more"
                style="?android:textAppearanceSmall"
                android:layout_height="40dp"
                android:layout_width="140dp"
                android:layout_marginTop="40dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/more"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:background="@drawable/btn_green"
                />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
